--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "NanoTrust",
-  "short_name": "NanoTrust",
+  "name": "NanoTether",
+  "short_name": "NanoTether",
   "description": "Decentralized Yield Infrastructure Powered by Venus Protocol",
   "start_url": "/",
   "scope": "/",
